--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "chai-spies": ">=0.6"
   },
   "devDependencies": {
-    "babel": "~5.2",
-    "jscs": "~1.12",
-    "jshint": "~2.7"
+    "babel": "^6.3.13",
+    "babel-cli": "^6.3.17",
+    "babel-preset-es2015": "^6.3.13",
+    "jscs": "^2.7.0",
+    "jshint": "^2.9.1-rc2"
   },
   "engines": {
     "node": ">=0.10.0"
@@ -32,7 +34,7 @@
     "jshint": "jshint src/",
     "jscs": "jscs src/",
     "precompile": "rm -rf dist/ && mkdir -p dist",
-    "compile": "babel -d dist/ src/",
+    "compile": "babel -d dist/ src --presets es2015",
     "prepublish": "npm run compile",
     "prerelease": "git checkout master && npm run compile; git commit -a -m 'Build dist/';",
     "release": "npm run release-patch",
